@@ -2,12 +2,10 @@ package com.R3DKn16h7.kerncraft.tileentities;
 
 import com.R3DKn16h7.kerncraft.network.ModGuiHandler;
 import net.minecraft.block.state.IBlockState;
-import net.minecraft.item.ItemBlock;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.EnumFacing;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
-import net.minecraftforge.fml.common.registry.GameRegistry;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
 
@@ -19,11 +17,6 @@ public class ChemicalFurnaceBlockEntity extends MachineBlock {
         super(unlocalizedName);
 
         setGui(ModGuiHandler.CHEMICAL_FURNACE_TILE_ENTITY_GUI);
-
-        GameRegistry.register(this);
-        GameRegistry.register(new ItemBlock(this).setRegistryName(unlocalizedName));
-        GameRegistry.registerTileEntity(ChemicalFurnaceTileEntity.class, unlocalizedName);
-
 
     }
 
