@@ -8,7 +8,6 @@ import net.minecraft.block.state.IBlockState;
 import net.minecraft.client.renderer.block.model.ModelResourceLocation;
 import net.minecraft.creativetab.CreativeTabs;
 import net.minecraft.item.Item;
-import net.minecraft.item.ItemBlock;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.EnumBlockRenderType;
 import net.minecraft.util.EnumFacing;
@@ -16,15 +15,12 @@ import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.IBlockAccess;
 import net.minecraft.world.World;
 import net.minecraftforge.client.model.ModelLoader;
-import net.minecraftforge.fml.common.registry.GameRegistry;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
 
 public class ClockBlockEntity extends BlockContainer {
 
     public static final PropertyInteger TIME = PropertyInteger.create("time", 0, 15);
-
-//    static String name = "detector";
 
     protected ClockBlockEntity() {
         super(Material.IRON);
@@ -34,15 +30,11 @@ public class ClockBlockEntity extends BlockContainer {
         this.setResistance(6.0f);
         this.setHarvestLevel("pickaxe", 2);
         this.setCreativeTab(CreativeTabs.MISC);
-        //this.isBlockContainer = true;
 
         setDefaultState(this.blockState.getBaseState().withProperty(TIME, 0));
 
         setUnlocalizedName(name);
         setRegistryName(name);
-        GameRegistry.register(this);
-        GameRegistry.register(new ItemBlock(this), getRegistryName());
-        GameRegistry.registerTileEntity(ClockTileEntity.class, getRegistryName().toString());
     }
 
     /**
