@@ -1,10 +1,8 @@
 package com.R3DKn16h7.kerncraft.tileentities;
 
 import com.R3DKn16h7.kerncraft.network.ModGuiHandler;
-import net.minecraft.item.ItemBlock;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraft.world.World;
-import net.minecraftforge.fml.common.registry.GameRegistry;
 
 public class ElectrolyzerBlockEntity extends MachineBlock {
 
@@ -12,10 +10,6 @@ public class ElectrolyzerBlockEntity extends MachineBlock {
         super(unlocalizedName);
 
         setGui(ModGuiHandler.CHEMICAL_FURNACE_TILE_ENTITY_GUI);
-
-        GameRegistry.register(this);
-        GameRegistry.register(new ItemBlock(this).setRegistryName(unlocalizedName));
-        GameRegistry.registerTileEntity(ChemicalFurnaceTileEntity.class, unlocalizedName);
 
     }
 
